# direct-file

./: .gitignore  .pre-commit-config.yaml  ONBOARDING.md  README.md
direct-file/: .env.example  README.md  docker-compose.ci.yaml  docker-compose.debug.stateapi.yaml  docker-compose.debug.yaml  docker-compose.yaml  package-lock.json
direct-file/backend/: .dockerignore  .gitattributes  .gitignore  .liquibase.properties  Dockerfile-local  README.md  docker_build.sh  pom.xml  trigger_notification_handler.sh
direct-file/boms/: .dockerignore  README.md  pom.xml
direct-file/config/: pmd-static-analysis-ruleset.xml  spotbugs-exclude.xml  spotbugs-include.xml  spotless-xml.prefs
direct-file/df-client/: .dockerignore  .eslintrc.json  .gitignore  .prettierignore  .prettierrc  .stylelintrc.json  Dockerfile-local  Dockerfile-static-site-local  README.md  docker_dev_server.sh  docker_static_site_dev_server.sh  package-lock.json  package.json  tsconfig.base.json
direct-file/docker/: .gitignore
direct-file/email-service/: .gitignore  .liquibase.properties  Dockerfile-local  README.md  pom.xml
direct-file/fact-graph-scala/: .scalafmt.conf  README.md  TODO  build.sbt  manual-scala-sbom.xml
direct-file/libs/: .dockerignore  README.md  pom.xml
direct-file/utils/csp-simulator/: .gitignore  Dockerfile  Procfile  gunicorn.conf.py  pyproject.toml
direct-file/utils/csp-simulator/csp_simulator/: __init__.py  auth.py  contants.py  database.py  internal.py  protected.py  proxy_request.py  unprotected.py  user_service.py
docs/: README.md
scripts/: run-static-analysis.sh
(+2934 files in other folders)
