[tool.poetry]
name = "csp_simulator"
version = "0.1.0"
description = "CSP Simulator"
authors = ["hello123"]
packages = [{include = "csp_simulator"}]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.3"
Flask-Session = "^0.8.0"
requests = "^2.32.0"
gunicorn = "^23.0.0"

[tool.poetry.group.dev.dependencies]
cyclonedx-bom = "^5.0.0"
pytest = "^8.2.0"
pytest-mock = "^3.11.1"
requests-mock = "^1.11.0"
pytest-cov = "^6.0.0"


[tool.poetry.group.tools.dependencies]
black = "^25.1.0"
isort = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
